src/objects/AMS_Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Inspections_AMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation_Endorsement_Status_code__c</fullName>
        <description>0 - Terminated
1 - Not Accredited
2 - Pending
3 - Non operational
4 - Listed
5 - Cash Basis no Commissions
6 - Cash Basis with Commissions
7 - Under Review
8 - Accredited (Change Processed)
9 - Accredited</description>
        <inlineHelpText>0 - Terminated
1 - Not Accredited
2 - Pending
3 - Non operational
4 - Listed
5 - Cash Basis no Commissions
6 - Cash Basis with Commissions
7 - Under Review
8 - Accredited (Change Processed)
9 - Accredited</inlineHelpText>
        <label>Accreditation/Endorsement Status code</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accreditation_Endorsement_organisation__c</fullName>
        <label>Accreditation/Endorsement organisation</label>
        <referenceTo>AMS_Accreditation_Organization__c</referenceTo>
        <relationshipLabel>Inspections (AMS)</relationshipLabel>
        <relationshipName>Inspections_AMS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>AMS_Agency__c</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Organisation_Status_attained__c</fullName>
        <label>Date Organisation Status attained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_synchronization__c</fullName>
        <label>Last synchronization</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_External_ID__c</fullName>
        <label>Legacy External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <label>Legacy System</label>
        <picklist>
            <picklistValues>
                <fullName>AIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webstar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inspection (AMS)</label>
    <nameField>
        <displayFormat>INS-{0000000}</displayFormat>
        <label>Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections (AMS)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>